// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`asApplication job 1`] = `
{
  "batch": [
    {
      "error": undefined,
      "job": {
        "asApplication": true,
        "request": {
          "method": "POST",
          "params": {
            "some": "app settings",
          },
          "url": "settins/api",
        },
      },
      "result": {
        "body": {
          "settings": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
  ],
  "errors": null,
  "success": true,
}
`;

exports[`asApplication job 2`] = `
{
  "access_token": "_APP_ID_|_APP_SECRET_",
  "batch": "[{"method":"POST","relative_url":"settins/api?access_token=_APP_ID_%7C_APP_SECRET_&appsecret_proof=b345404c0883034d5e07120293737f58fc94529813075bd0ddb69dc0f0cd4e1b","body":"some=app%20settings","omit_response_on_success":false}]",
}
`;

exports[`call to graph api 1`] = `
{
  "access_token": "access_token_foo",
  "batch": "[{"method":"POST","relative_url":"me/messages?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","body":"recipient=%7B%22id%22%3A%22john%22%7D&id=1","name":"facebook.id.foo.john-1","omit_response_on_success":false},{"method":"POST","relative_url":"some/api?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","body":"recipient=%7B%22id%22%3A%22john%22%7D&id=2","depends_on":"facebook.id.foo.john-1","name":"facebook.id.foo.john-2","omit_response_on_success":false},{"method":"POST","relative_url":"me/messages?access_token=access_token_bar&appsecret_proof=814fa9c737db6bf26b8d91139db95cb36f9248521852eaad447a93ac079f6bca","body":"recipient=%7B%22id%22%3A%22jane%22%7D&id=3","name":"facebook.id.bar.jane-1","omit_response_on_success":false},{"method":"POST","relative_url":"another/api?access_token=access_token_baz&appsecret_proof=b0c8d9ea3d72eacab94cd4f1389f27d608b56230df45deac816f164bac03cc80","body":"recipient=%7B%22id%22%3A%22jojo%22%7D&id=4","name":"facebook.id.baz.jojo-1","omit_response_on_success":false}]",
}
`;

exports[`fail if one single job fail 1`] = `
{
  "batch": [
    {
      "error": undefined,
      "job": {
        "channel": {
          "platform": "test",
          "uid": "foo",
        },
        "key": "facebook.id.foo.john",
        "request": {
          "method": "POST",
          "params": {
            "id": 1,
            "recipient": {
              "id": "john",
            },
          },
          "url": "me/messages",
        },
      },
      "result": {
        "body": {
          "message_id": "xxx",
          "recipient_id": "xxx",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": [GraphAPIError (OAuthException): you should not passed!],
      "job": {
        "channel": {
          "platform": "test",
          "uid": "foo",
        },
        "key": "facebook.id.foo.john",
        "request": {
          "method": "POST",
          "params": {
            "id": 2,
            "recipient": {
              "id": "john",
            },
          },
          "url": "some/api",
        },
      },
      "result": {
        "body": {
          "error": {
            "code": 999,
            "fbtrace_id": "DuNgzaHdmcb",
            "message": "you should not passed!",
            "type": "OAuthException",
          },
        },
        "code": 400,
      },
      "success": false,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "platform": "test",
          "uid": "bar",
        },
        "key": "facebook.id.bar.jane",
        "request": {
          "method": "POST",
          "params": {
            "id": 3,
            "recipient": {
              "id": "jane",
            },
          },
          "url": "me/messages",
        },
      },
      "result": {
        "body": {
          "message_id": "xxx",
          "recipient_id": "xxx",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "platform": "test",
          "uid": "baz",
        },
        "key": "facebook.id.baz.jojo",
        "request": {
          "method": "POST",
          "params": {
            "id": 4,
            "recipient": {
              "id": "jojo",
            },
          },
          "url": "another/api",
        },
      },
      "result": {
        "body": {
          "message_id": "xxx",
          "recipient_id": "xxx",
        },
        "code": 200,
      },
      "success": true,
    },
  ],
  "errors": [
    [GraphAPIError (OAuthException): you should not passed!],
  ],
  "success": false,
}
`;

exports[`job with accessToken 1`] = `
{
  "batch": [
    {
      "error": undefined,
      "job": {
        "accessToken": "__MY_SPECIAL_ACCESS_TOKEN__",
        "channel": {
          "platform": "test",
          "uid": "foo",
        },
        "request": {
          "method": "POST",
          "params": {
            "some": "app settings",
          },
          "url": "settins/api",
        },
      },
      "result": {
        "body": {
          "settings": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
  ],
  "errors": null,
  "success": true,
}
`;

exports[`job with accessToken 2`] = `
{
  "access_token": "__MY_SPECIAL_ACCESS_TOKEN__",
  "batch": "[{"method":"POST","relative_url":"settins/api?access_token=__MY_SPECIAL_ACCESS_TOKEN__&appsecret_proof=3866a64f89c66f16f52e103e35941f98b78ca021b1b94baa853ed5a2175e9ccc","body":"some=app%20settings","omit_response_on_success":false}]",
}
`;

exports[`skip job when no access token available 1`] = `
{
  "batch": [
    {
      "error": undefined,
      "job": {
        "accessToken": "__MY_ACCESS_TOKEN__",
        "request": {
          "method": "POST",
          "params": {
            "some": "app settings",
          },
          "url": "settins/api",
        },
      },
      "result": {
        "body": {
          "id": 1,
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "platform": "test",
          "uid": "foo",
        },
        "key": "facebook.id.foo.john",
        "request": {
          "method": "POST",
          "params": {
            "id": 1,
            "recipient": {
              "id": "john",
            },
          },
          "url": "me/messages",
        },
      },
      "result": {
        "body": {
          "id": 2,
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "platform": "test",
          "uid": "foo",
        },
        "key": "facebook.id.foo.john",
        "request": {
          "method": "POST",
          "params": {
            "id": 2,
            "recipient": {
              "id": "john",
            },
          },
          "url": "some/api",
        },
      },
      "result": {
        "body": {
          "id": 3,
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": [Error: No access token available for channel bar],
      "job": {
        "channel": {
          "platform": "test",
          "uid": "bar",
        },
        "key": "facebook.id.bar.jane",
        "request": {
          "method": "POST",
          "params": {
            "id": 3,
            "recipient": {
              "id": "jane",
            },
          },
          "url": "me/messages",
        },
      },
      "result": {
        "body": {},
        "code": 0,
        "headers": {},
      },
      "success": false,
    },
    {
      "error": [Error: No access token available for channel baz],
      "job": {
        "channel": {
          "platform": "test",
          "uid": "baz",
        },
        "key": "facebook.id.baz.jojo",
        "request": {
          "method": "POST",
          "params": {
            "id": 4,
            "recipient": {
              "id": "jojo",
            },
          },
          "url": "another/api",
        },
      },
      "result": {
        "body": {},
        "code": 0,
        "headers": {},
      },
      "success": false,
    },
    {
      "error": undefined,
      "job": {
        "asApplication": true,
        "request": {
          "method": "POST",
          "params": {
            "some": "app settings",
          },
          "url": "settins/api",
        },
      },
      "result": {
        "body": {
          "id": 4,
        },
        "code": 200,
      },
      "success": true,
    },
  ],
  "errors": [
    [Error: No access token available for channel bar],
    [Error: No access token available for channel baz],
  ],
  "success": false,
}
`;

exports[`skip job when no access token available 2`] = `
{
  "access_token": "__MY_ACCESS_TOKEN__",
  "batch": "[{"method":"POST","relative_url":"settins/api?access_token=__MY_ACCESS_TOKEN__&appsecret_proof=eb72374e6ec5aca7b4d5007e01d6d86b57a89985573c2bf69c4a8dbdd80ec867","body":"some=app%20settings","omit_response_on_success":false},{"method":"POST","relative_url":"me/messages?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","body":"recipient=%7B%22id%22%3A%22john%22%7D&id=1","name":"facebook.id.foo.john-1","omit_response_on_success":false},{"method":"POST","relative_url":"some/api?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","body":"recipient=%7B%22id%22%3A%22john%22%7D&id=2","depends_on":"facebook.id.foo.john-1","name":"facebook.id.foo.john-2","omit_response_on_success":false},{"method":"POST","relative_url":"settins/api?access_token=_APP_ID_%7C_APP_SECRET_&appsecret_proof=b345404c0883034d5e07120293737f58fc94529813075bd0ddb69dc0f0cd4e1b","body":"some=app%20settings","omit_response_on_success":false}]",
}
`;

exports[`upload files with form data if binary attached on job 1`] = `
"-----MULTIPART_SEPARATOR-----
Content-Disposition: form-data; name="file_0"

_file0_
-----MULTIPART_SEPARATOR-----
Content-Disposition: form-data; name="file_1"; filename="YouDontSay.jpg"
Content-Type: image/jpeg

_file1_
-----MULTIPART_SEPARATOR-----
Content-Disposition: form-data; name="file_2"; filename="Cage.gif"
Content-Type: image/gif

_file2_
-----MULTIPART_SEPARATOR-----
Content-Disposition: form-data; name="access_token"

access_token_foo
-----MULTIPART_SEPARATOR-----
Content-Disposition: form-data; name="batch"

[{"method":"POST","relative_url":"me/messages?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","body":"recipient=%7B%22id%22%3A%22john%22%7D&id=1","name":"facebook.id.foo.john-1","attached_files":"file_0","omit_response_on_success":false},{"method":"POST","relative_url":"some/api?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","body":"recipient=%7B%22id%22%3A%22john%22%7D&id=2","depends_on":"facebook.id.foo.john-1","name":"facebook.id.foo.john-2","omit_response_on_success":false},{"method":"POST","relative_url":"me/messages?access_token=access_token_bar&appsecret_proof=814fa9c737db6bf26b8d91139db95cb36f9248521852eaad447a93ac079f6bca","body":"recipient=%7B%22id%22%3A%22jane%22%7D&id=3","name":"facebook.id.bar.jane-1","attached_files":"file_1","omit_response_on_success":false},{"method":"POST","relative_url":"another/api?access_token=access_token_baz&appsecret_proof=b0c8d9ea3d72eacab94cd4f1389f27d608b56230df45deac816f164bac03cc80","body":"recipient=%7B%22id%22%3A%22jojo%22%7D&id=4","name":"facebook.id.baz.jojo-1","attached_files":"file_2","omit_response_on_success":false}]
-----MULTIPART_SEPARATOR-------
"
`;

exports[`use querystring params for DELETE request 1`] = `
{
  "access_token": "access_token_foo",
  "batch": "[{"method":"DELETE","relative_url":"me/messenger_profile?fields=%5B%22whitelisted_domains%22%5D&access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false}]",
}
`;

exports[`use querystring params for GET request 1`] = `
{
  "access_token": "access_token_foo",
  "batch": "[{"method":"GET","relative_url":"1234567890?fields=%5B%22id%22%2C%22name%22%2C%22email%22%5D&access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false}]",
}
`;

exports[`using API result in following request registerResult & consumeResult in different batches 1`] = `
{
  "batch": [
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "request": {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": {
        "body": {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "key": "foo_thread",
        "registerResult": "image_1",
        "request": {
          "method": "POST",
          "params": {
            "file": "@/pretend/to/upload/a/file.jpg",
            "type": "image/jpeg",
          },
          "url": "1234567890/media",
        },
      },
      "result": {
        "body": {
          "id": "1111111111",
        },
        "code": 201,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "key": "foo_thread",
        "registerResult": "image_2",
        "request": {
          "method": "POST",
          "params": {
            "file": "@/pretend/to/upload/b/file.jpg",
            "type": "image/jpeg",
          },
          "url": "1234567890/media",
        },
      },
      "result": {
        "body": {
          "id": "2222222222",
        },
        "code": 201,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "consumeResult": {
          "accomplishRequest": [MockFunction moxy] {
            "calls": [
              [
                {
                  "method": "POST",
                  "params": {
                    "images": [],
                    "to": "9876543210",
                    "type": "image",
                  },
                  "url": "1234567890/messages",
                },
                [
                  "image_1",
                  "image_2",
                ],
                [Function],
              ],
            ],
            "results": [
              {
                "type": "return",
                "value": {
                  "method": "POST",
                  "params": {
                    "images": [
                      {
                        "id": "1111111111",
                      },
                      {
                        "id": "{result=foo_thread-1:$.id}",
                      },
                    ],
                    "to": "9876543210",
                    "type": "image",
                  },
                  "url": "1234567890/messages",
                },
              },
            ],
          },
          "keys": [
            "image_1",
            "image_2",
          ],
        },
        "key": "foo_thread",
        "request": {
          "method": "POST",
          "params": {
            "images": [],
            "to": "9876543210",
            "type": "image",
          },
          "url": "1234567890/messages",
        },
      },
      "result": {
        "body": {
          "messages": [
            {
              "id": "123",
            },
          ],
        },
        "code": 200,
      },
      "success": true,
    },
  ],
  "errors": null,
  "success": true,
}
`;

exports[`using API result in following request registerResult & consumeResult in different batches 2`] = `
{
  "access_token": "access_token_foo",
  "batch": "[{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"GET","relative_url":"1234567890?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","omit_response_on_success":false},{"method":"POST","relative_url":"1234567890/media?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","body":"type=image%2Fjpeg&file=%40%2Fpretend%2Fto%2Fupload%2Fa%2Ffile.jpg","name":"foo_thread-1","omit_response_on_success":false}]",
}
`;

exports[`using API result in following request registerResult & consumeResult in different batches 3`] = `
{
  "access_token": "access_token_foo",
  "batch": "[{"method":"POST","relative_url":"1234567890/media?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","body":"type=image%2Fjpeg&file=%40%2Fpretend%2Fto%2Fupload%2Fb%2Ffile.jpg","name":"foo_thread-1","omit_response_on_success":false},{"method":"POST","relative_url":"1234567890/messages?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","body":"to=9876543210&type=image&images=%5B%7B%22id%22%3A%221111111111%22%7D%2C%7B%22id%22%3A%22%7Bresult%3Dfoo_thread-1%3A%24.id%7D%22%7D%5D","depends_on":"foo_thread-1","name":"foo_thread-2","omit_response_on_success":false}]",
}
`;

exports[`using API result in following request registerResult & consumeResult in the same batch 1`] = `
{
  "batch": [
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "key": "foo_thread",
        "registerResult": "image_1",
        "request": {
          "method": "POST",
          "params": {
            "file": "@/pretend/to/upload/a/file.jpg",
            "type": "image/jpeg",
          },
          "url": "1234567890/media",
        },
      },
      "result": {
        "body": {
          "id": "1111111111",
        },
        "code": 201,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "key": "foo_thread",
        "registerResult": "image_2",
        "request": {
          "method": "POST",
          "params": {
            "file": "@/pretend/to/upload/b/file.jpg",
            "type": "image/jpeg",
          },
          "url": "1234567890/media",
        },
      },
      "result": {
        "body": {
          "id": "2222222222",
        },
        "code": 201,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "consumeResult": {
          "accomplishRequest": [MockFunction moxy] {
            "calls": [
              [
                {
                  "method": "POST",
                  "params": {
                    "images": [],
                    "to": "9876543210",
                    "type": "image",
                  },
                  "url": "1234567890/messages",
                },
                [
                  "image_1",
                  "image_2",
                ],
                [Function],
              ],
            ],
            "results": [
              {
                "type": "return",
                "value": {
                  "method": "POST",
                  "params": {
                    "images": [
                      {
                        "id": "{result=foo_thread-1:$.id}",
                      },
                      {
                        "id": "{result=foo_thread-2:$.id}",
                      },
                    ],
                    "to": "9876543210",
                    "type": "image",
                  },
                  "url": "1234567890/messages",
                },
              },
            ],
          },
          "keys": [
            "image_1",
            "image_2",
          ],
        },
        "key": "foo_thread",
        "request": {
          "method": "POST",
          "params": {
            "images": [],
            "to": "9876543210",
            "type": "image",
          },
          "url": "1234567890/messages",
        },
      },
      "result": {
        "body": {
          "messages": [
            {
              "id": "123",
            },
          ],
        },
        "code": 200,
      },
      "success": true,
    },
  ],
  "errors": null,
  "success": true,
}
`;

exports[`using API result in following request registerResult & consumeResult in the same batch 2`] = `
{
  "access_token": "access_token_foo",
  "batch": "[{"method":"POST","relative_url":"1234567890/media?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","body":"type=image%2Fjpeg&file=%40%2Fpretend%2Fto%2Fupload%2Fa%2Ffile.jpg","name":"foo_thread-1","omit_response_on_success":false},{"method":"POST","relative_url":"1234567890/media?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","body":"type=image%2Fjpeg&file=%40%2Fpretend%2Fto%2Fupload%2Fb%2Ffile.jpg","depends_on":"foo_thread-1","name":"foo_thread-2","omit_response_on_success":false},{"method":"POST","relative_url":"1234567890/messages?access_token=access_token_foo&appsecret_proof=c75729ba2a8b2a96a945b4f86274bd417c62a7f1a301a0f6913e180efdab0e2e","body":"to=9876543210&type=image&images=%5B%7B%22id%22%3A%22%7Bresult%3Dfoo_thread-1%3A%24.id%7D%22%7D%2C%7B%22id%22%3A%22%7Bresult%3Dfoo_thread-2%3A%24.id%7D%22%7D%5D","depends_on":"foo_thread-2","name":"foo_thread-3","omit_response_on_success":false}]",
}
`;

exports[`using API result in following request when job key is undeinfed 1`] = `
{
  "batch": [
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "key": undefined,
        "registerResult": "image_1",
        "request": {
          "method": "POST",
          "params": {
            "file": "@/pretend/to/upload/a/file.jpg",
            "type": "image/jpeg",
          },
          "url": "1234567890/media",
        },
      },
      "result": {
        "body": {
          "id": "1111111111",
        },
        "code": 201,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "key": undefined,
        "registerResult": "image_2",
        "request": {
          "method": "POST",
          "params": {
            "file": "@/pretend/to/upload/b/file.jpg",
            "type": "image/jpeg",
          },
          "url": "1234567890/media",
        },
      },
      "result": {
        "body": {
          "id": "2222222222",
        },
        "code": 201,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "uid": "foo",
        },
        "consumeResult": {
          "accomplishRequest": [MockFunction moxy] {
            "calls": [
              [
                {
                  "method": "POST",
                  "params": {
                    "images": [],
                    "to": "9876543210",
                    "type": "image",
                  },
                  "url": "1234567890/messages",
                },
                [
                  "image_1",
                  "image_2",
                ],
                [Function],
              ],
            ],
            "results": [
              {
                "type": "return",
                "value": {
                  "method": "POST",
                  "params": {
                    "images": [
                      {
                        "id": "{result=#request-0:$.id}",
                      },
                      {
                        "id": "{result=#request-1:$.id}",
                      },
                    ],
                    "to": "9876543210",
                    "type": "image",
                  },
                  "url": "1234567890/messages",
                },
              },
            ],
          },
          "keys": [
            "image_1",
            "image_2",
          ],
        },
        "key": undefined,
        "request": {
          "method": "POST",
          "params": {
            "images": [],
            "to": "9876543210",
            "type": "image",
          },
          "url": "1234567890/messages",
        },
      },
      "result": {
        "body": {
          "messages": [
            {
              "id": "123",
            },
          ],
        },
        "code": 200,
      },
      "success": true,
    },
  ],
  "errors": null,
  "success": true,
}
`;

exports[`with defaultAccessTokenOption 1`] = `
{
  "batch": [
    {
      "error": undefined,
      "job": {
        "channel": {
          "platform": "test",
          "uid": "foo",
        },
        "key": "facebook.id.foo.john",
        "request": {
          "method": "POST",
          "params": {
            "id": 1,
            "recipient": {
              "id": "john",
            },
          },
          "url": "me/messages",
        },
      },
      "result": {
        "body": {
          "id": 1,
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "platform": "test",
          "uid": "foo",
        },
        "key": "facebook.id.foo.john",
        "request": {
          "method": "POST",
          "params": {
            "id": 2,
            "recipient": {
              "id": "john",
            },
          },
          "url": "some/api",
        },
      },
      "result": {
        "body": {
          "id": 2,
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "platform": "test",
          "uid": "bar",
        },
        "key": "facebook.id.bar.jane",
        "request": {
          "method": "POST",
          "params": {
            "id": 3,
            "recipient": {
              "id": "jane",
            },
          },
          "url": "me/messages",
        },
      },
      "result": {
        "body": {
          "id": 3,
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "channel": {
          "platform": "test",
          "uid": "baz",
        },
        "key": "facebook.id.baz.jojo",
        "request": {
          "method": "POST",
          "params": {
            "id": 4,
            "recipient": {
              "id": "jojo",
            },
          },
          "url": "another/api",
        },
      },
      "result": {
        "body": {
          "id": 4,
        },
        "code": 200,
      },
      "success": true,
    },
    {
      "error": undefined,
      "job": {
        "asApplication": true,
        "request": {
          "method": "POST",
          "params": {
            "some": "app settings",
          },
          "url": "settins/api",
        },
      },
      "result": {
        "body": {
          "id": 5,
        },
        "code": 200,
      },
      "success": true,
    },
  ],
  "errors": null,
  "success": true,
}
`;

exports[`with defaultAccessTokenOption 2`] = `
{
  "access_token": "_DEFAULT_ACCESS_TOKEN_",
  "batch": "[{"method":"POST","relative_url":"me/messages?access_token=_DEFAULT_ACCESS_TOKEN_&appsecret_proof=f7ae03d1c98e64204c11200c5da487d46eba9d6608fb5054d60a5075c3782404","body":"recipient=%7B%22id%22%3A%22john%22%7D&id=1","name":"facebook.id.foo.john-1","omit_response_on_success":false},{"method":"POST","relative_url":"some/api?access_token=_DEFAULT_ACCESS_TOKEN_&appsecret_proof=f7ae03d1c98e64204c11200c5da487d46eba9d6608fb5054d60a5075c3782404","body":"recipient=%7B%22id%22%3A%22john%22%7D&id=2","depends_on":"facebook.id.foo.john-1","name":"facebook.id.foo.john-2","omit_response_on_success":false},{"method":"POST","relative_url":"me/messages?access_token=access_token_bar&appsecret_proof=814fa9c737db6bf26b8d91139db95cb36f9248521852eaad447a93ac079f6bca","body":"recipient=%7B%22id%22%3A%22jane%22%7D&id=3","name":"facebook.id.bar.jane-1","omit_response_on_success":false},{"method":"POST","relative_url":"another/api?access_token=_DEFAULT_ACCESS_TOKEN_&appsecret_proof=f7ae03d1c98e64204c11200c5da487d46eba9d6608fb5054d60a5075c3782404","body":"recipient=%7B%22id%22%3A%22jojo%22%7D&id=4","name":"facebook.id.baz.jojo-1","omit_response_on_success":false},{"method":"POST","relative_url":"settins/api?access_token=_APP_ID_%7C_APP_SECRET_&appsecret_proof=b345404c0883034d5e07120293737f58fc94529813075bd0ddb69dc0f0cd4e1b","body":"some=app%20settings","omit_response_on_success":false}]",
}
`;
